segundo commit ,espero não bugar o github.

--- a/atividade site cnn/index.html
+++ b/atividade site cnn/index.html
@@ -98,10 +98,10 @@
                 frequentes podem acabar se perdendo e tendo dificuldade para achar uma notícia expecifica, mas as notícias principais ficam bem destacadas e isso é ótimo.<br>
             </p><br><br>
             <p>
-                Para deixar o site mais interessante para um público jovem e da periferia, que não tem muito contato com internet e computadores e muito menos sites<br>
-                sites de noticias, removeria o excesso de informação junta para facilitar a usabilidade, deixaria em maior destaque as informações Mundiais e Nacionais,<br>
-                Tambem colocaria notícias mais locais, da cidade ou do bairro, adicionaria noticias relacionadas a eSports porquê a grande maioria dos jovens adoram jogos.<br> 
-                E a divulgação de cursos e bolsas de estudos focada em alunos de escola pública, como por exemplo o Instituto Proa, organização sem fins lucrativos que <br>
+                Para deixar o site mais interessante para um público jovem e de periferia, que não tem muito contato com internet e computadores e muito menos sites<br>
+                de noticias, removeria o excesso de informação juntas para facilitar a usabilidade, deixaria em maior destaque as informações Mundiais e Nacionais,<br>
+                Tambem colocaria notícias mais locais, da cidade por exemplo, para o joevm saber oque se passa por perto, adicionaria noticias relacionadas a Esportes e eSports porquê a grande maioria dos jovens adoram jogos.<br>
+                E a divulgação de cursos e bolsas de estudos focada em alunos de baixa renda, como por exemplo o Instituto Proa, organização sem fins lucrativos que <br>
                 visa capacitar o jovem para o mercado de trabalho através do ensino técnico em programação, gerando uma nova perspectiva de vida para o jovem da periferia.
             </p><br><br><br><br>
          </section>
